--- a/project/src/guide/index.html
+++ b/project/src/guide/index.html
@@ -11,49 +11,7 @@
   <title>코딩리스트</title>
   <script type="text/javascript" src="../js/html5shiv.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-  <script type="text/javascript">
-  $(function() {
-    $(".guide_table td").hover(function(){
-      $(this).css({backgroundColor:"#ddd"}).siblings().css({backgroundColor:"#ddd"});
-    },function(){
-      $(this).css({backgroundColor:"#fff"}).siblings().css({backgroundColor:"#fff"});
-    })
-    var idxThFile = $(".guide_table th").index($(".guide_table th:contains('파일명')"));
-    var idxThIng = $(".guide_table th").index($(".guide_table th:contains('진행여부')"));
-    $(".guide_table tr").find("td:eq("+idxThFile+")").each(function(i, o){
-      var pageFullName = $(o).text();
-      var pageName;
-      var idxSlash = pageFullName.lastIndexOf("/");
-      if(idxSlash>=0) {
-        pageName = pageFullName.substring(idxSlash+1);
-      } else {
-        pageName= pageFullName;
-      }
-       
-      var pageUrl = $("<a href='"+pageFullName+"' target='_blank'>"+pageName+"</a>");
-      $(o).html(pageUrl);
-    });
-   
-    $(".guide_table tr").find("td:eq("+idxThIng+")").each(function(i, o){
-       var ingTxt = $(o).text();
-       if(ingTxt == "" || ingTxt == "-") {
-         $(o).text("-");
-       } else if (ingTxt == "완료") {
-         $(o).text("완료").css({color:"#000"});
-       } else if (ingTxt == "진행중") {
-         $(o).text("진행중").css({color:"#060"});
-       } else if (ingTxt == "보류중") {
-         $(o).text("보류중").css({color:"#600"});
-       }
-    });
-
-    var cNum = $(".cat, .cat~tr").size();
-    $(".cat, .cat~tr").each(function(i, o) {
-      $(o).find("td:first").text(cNum);
-      cNum--;
-    });
-  });
-  </script>
+  <script type="text/javascript" src="js/guide.js"></script>
  </head>
  <body>
   <div id="header">
@@ -73,6 +31,16 @@
    </ul>
   </div>
   <div id="container">
+	<dl class="status_ing">
+		<dt>새문서</dt>
+		<dd>-</dd>
+		<dt>진행중</dt>
+		<dd>-</dd>
+		<dt>완료</dt>
+		<dd>-</dd>
+		<dt>보류</dt>
+		<dd>-</dd>
+	</dl>
    <table class="guide_table">
     <thead>
      <tr>
