가이드작업

--- a/project/src/guide/index.html
+++ b/project/src/guide/index.html
@@ -45,13 +45,14 @@
     <thead>
      <tr>
       <th>순번</th>
+      <th>페이지명</th>
       <th>1Depth</th>
       <th>2Depth</th>
       <th>3Depth</th>
-      <th>페이지명</th>
       <th>파일명</th>
       <th>진행여부</th>
       <th>담당자</th>
+      <th>설계</th>
       <th>비고</th>
      </tr>
     </thead>
@@ -66,71 +67,78 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
      </tr>
      <tr class="cat part_1">
       <td>4</td>
+      <td>페이지명</td>
       <td>내용1</td>
       <td>내용2</td>
       <td>내용3</td>
-      <td>페이지명</td>
       <td>../index.html</td>
       <td>완료</td>
       <td>홍길동</td>
+      <td><a href="../../../공유문서/설계/화면정의서/생산관리/화면/공정작업결과등록화면.xls"><img src="images/ico_xls.gif" alt="엑셀 설계"></a></a></td>
       <td>보류</td>
      </tr>
      <tr>
       <td>4</td>
+      <td>페이지명</td>
       <td>내용1</td>
       <td>내용2</td>
       <td>내용3</td>
-      <td>페이지명</td>
       <td>../sub/index.html</td>
       <td></td>
       <td>홍길동</td>
+      <td><a href="#" target="_blank"><a href="#" target="_blank"><img src="images/ico_xls.gif" alt="엑셀 설계"></a></a></td>
       <td>보류</td>
      </tr>
      <tr>
       <td>4</td>
+      <td>페이지명</td>
       <td>내용1</td>
       <td>내용2</td>
       <td>내용3</td>
-      <td>페이지명</td>
       <td>../sub/index.html</td>
       <td></td>
       <td>홍길동</td>
+      <td><a href="#" target="_blank"><img src="images/ico_xls.gif" alt="엑셀 설계"></a></td>
       <td>보류</td>
      </tr>
      <tr class="cat part_2">
       <td>4</td>
+      <td>페이지명</td>
       <td>내용1</td>
       <td>내용2</td>
       <td>내용3</td>
-      <td>페이지명</td>
       <td>../index.html</td>
       <td>완료</td>
       <td>홍길동</td>
+      <td><a href="#" target="_blank"><a href="#" target="_blank"><img src="images/ico_xls.gif" alt="엑셀 설계"></a></a></td>
       <td>보류</td>
      </tr>
      <tr>
       <td>4</td>
+      <td>페이지명</td>
       <td>내용1</td>
       <td>내용2</td>
       <td>내용3</td>
-      <td>페이지명</td>
       <td>../index.html</td>
       <td>진행중</td>
       <td>홍길동</td>
+      <td><a href="#" target="_blank"><a href="#" target="_blank"><img src="images/ico_xls.gif" alt="엑셀 설계"></a></a></td>
       <td>보류</td>
      </tr>
      <tr>
       <td>4</td>
+      <td>페이지명</td>
       <td>내용1</td>
       <td>내용2</td>
       <td>내용3</td>
-      <td>페이지명</td>
       <td>../index.html</td>
       <td>완료</td>
       <td>홍길동</td>
+      <td><a href="#" target="_blank"><a href="#" target="_blank"><img src="images/ico_xls.gif" alt="엑셀 설계"></a></a></td>
       <td>보류</td>
      </tr>
     </tbody>
