--- a/project/src/guide/guide_table.html
+++ b/project/src/guide/guide_table.html
@@ -204,69 +204,179 @@
 		</tr>
 	</tbody>
 </table>       					
+</textarea> 
+          <h1 class="tit_2">타이틀-2</h1>
+          <div class="row">
+            <div class="col_12">
+              <div class="col">
+                <div class="basic_table_row_1">
+                  <table  cellspacing="0" width="100%">
+                    <colgroup>
+                      <col width="150px">
+                      <col width="*">
+                    </colgroup>
+                    <tbody>
+                      <tr>
+                        <th scope="row">제목1</th>
+                        <td>내용1</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">제목4</th>
+                        <td>내용4</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>                
+              </div>
+            </div>
+          </div>
+<textarea class="ex_tag_zone" cols="30" rows="10">
+<div class="row">
+  <div class="col_12">
+    <div class="col">
+      <div class="basic_table_row_1">
+        <table  cellspacing="0" width="100%">
+          <colgroup>
+            <col width="150px">
+            <col width="*">
+          </colgroup>
+          <tbody>
+            <tr>
+              <th scope="row">제목1</th>
+              <td>내용1</td>
+            </tr>
+            <tr>
+              <th scope="row">제목4</th>
+              <td>내용4</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>                
+    </div>
+  </div>
+</div>               
+</textarea> 
+          <h1 class="tit_2">타이틀-2</h1>
+          <div class="row">
+            <div class="col_12">
+              <div class="col">
+                <div class="basic_table_row_1">
+                  <table  cellspacing="0" width="100%">
+                    <tbody>
+                      <tr>
+                        <th scope="row">제목1</th>
+                        <td>내용1</td>
+                        <th scope="row">제목2</th>
+                        <td>내용2</td>
+                        <th scope="row">제목3</th>
+                        <td>내용3</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">제목4</th>
+                        <td class="ta_r">내용4</td>
+                        <th scope="row">제목5</th>
+                        <td class="ta_r">내용5</td>
+                        <th scope="row">제목6</th>
+                        <td class="ta_r">내용6</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>                
+              </div>
+            </div>
+          </div>
+<textarea class="ex_tag_zone" cols="30" rows="10">
+<div class="row">
+  <div class="col_12">
+    <div class="col">
+      <div class="basic_table_row_1">
+        <table  cellspacing="0" width="100%">
+          <tbody>
+            <tr>
+              <th scope="row">제목1</th>
+              <td>내용1</td>
+              <th scope="row">제목2</th>
+              <td>내용2</td>
+              <th scope="row">제목3</th>
+              <td>내용3</td>
+            </tr>
+            <tr>
+              <th scope="row">제목4</th>
+              <td class="ta_r">내용4</td>
+              <th scope="row">제목5</th>
+              <td class="ta_r">내용5</td>
+              <th scope="row">제목6</th>
+              <td class="ta_r">내용6</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>                
+    </div>
+  </div>
+</div>                
 </textarea>	
           <h1 class="tit_2">타이틀-2</h1>
-          <div class="basic_table_row_1">
-		        <table  cellspacing="0" width="100%">
-							<tbody>
-								<tr>
-									<th scope="row">제목1</th>
-									<td></td>
-									<th scope="row">제목2</th>
-									<td></td>
-									<th scope="row"></th>
-									<td></td>
-								</tr>
-								<tr>
-									<th scope="row">제목3</th>
-									<td></td>
-									<th scope="row">제목4</th>
-									<td></td>
-									<th scope="row"></th>
-									<td></td>
-								</tr>
-							</tbody>
-						</table>
+          <div class="row">
+            <div class="col_7">
+              <div class="col">
+                <div class="basic_table_row_1">
+                  <table  cellspacing="0" width="100%">
+                    <tbody>
+                      <tr>
+                        <th scope="row">제목1</th>
+                        <td>내용1</td>
+                        <th scope="row">제목2</th>
+                        <td>내용2</td>
+                        <th scope="row">제목3</th>
+                        <td>내용3</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">제목4</th>
+                        <td class="ta_r">내용4</td>
+                        <th scope="row">제목5</th>
+                        <td class="ta_r">내용5</td>
+                        <th scope="row">제목6</th>
+                        <td class="ta_r">내용6</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>                
+              </div>
+            </div>
           </div>
+<textarea class="ex_tag_zone" cols="30" rows="10">
+<div class="row">
+  <div class="col_7">
+    <div class="col">
+      <div class="basic_table_row_1">
+        <table  cellspacing="0" width="100%">
+          <tbody>
+            <tr>
+              <th scope="row">제목1</th>
+              <td>내용1</td>
+              <th scope="row">제목2</th>
+              <td>내용2</td>
+              <th scope="row">제목3</th>
+              <td>내용3</td>
+            </tr>
+            <tr>
+              <th scope="row">제목4</th>
+              <td class="ta_r">내용4</td>
+              <th scope="row">제목5</th>
+              <td class="ta_r">내용5</td>
+              <th scope="row">제목6</th>
+              <td class="ta_r">내용6</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>                
+    </div>
+  </div>
+</div>                
+</textarea>          
         </div>
        </section>
-     </div>
-     <div class="row">
-       <section class="section_1 col_6">
-        <div class="col">
-          <h1 class="tit_2">타이틀-2</h1>
-        </div>
-       </section>     
-       <section class="section_1 col_6">
-        <div class="col">
-          <h1 class="tit_2">타이틀-2</h1>
-        </div>
-       </section>
-      </div>
-     <div class="row">
-       <section class="section_1 col_4">
-        <div class="col">
-          <h1 class="tit_2">타이틀-2</h1>
-        </div>
-       </section>     
-       <section class="section_1 col_8">
-        <div class="col">
-          <h1 class="tit_2">타이틀-2</h1>
-        </div>
-       </section>
-      </div>
-     <div class="row">
-       <section class="section_1 col_8">
-        <div class="col">
-          <h1 class="tit_2">타이틀-2</h1>
-        </div>
-       </section>     
-       <section class="section_1 col_4">
-        <div class="col">
-          <h1 class="tit_2">타이틀-2</h1>
-        </div>
-       </section>
-      </div>     
+     </div>    
     </div>
   </section>
  </body>
