--- a/project/src/d_prd_mng/d_prd_mng_3.html
+++ b/project/src/d_prd_mng/d_prd_mng_3.html
@@ -69,7 +69,7 @@
 								<table class="table_column_1 display nowrpa" cellspacing="0" width="100%">
 									<thead>
 										<tr>
-											<th scope="col">공정별 작업지시 합산 현황</th>
+											<th scope="col">공정중분류</th>
 											<th scope="col">컷칭</th>
 											<th scope="col">납땜</th>
 											<th scope="col">정렬</th>
