--- a/project/src/b_cmm_mng/b_cmm_mng_1.html
+++ b/project/src/b_cmm_mng/b_cmm_mng_1.html
@@ -47,7 +47,7 @@
             <h1 class="tit_2">공정현황 LIST</h1>
             <form action="#" method="post" class="pos_r">
             <div class="basic_table_column_1">
-              <table class="table_column_1 display nowrpa" data-table-height="200px" cellspacing="0" width="100%">
+              <table class="table_column_1 display nowrap" data-table-height="200px" cellspacing="0" width="100%">
                 <thead>
                   <tr>
                     <th scope="col">순번</th>
