--- a/project/src/b_cmm_mng/b_cmm_mng_2.html
+++ b/project/src/b_cmm_mng/b_cmm_mng_2.html
@@ -41,6 +41,14 @@
           </div>
          </section>
         </div>
+        <div class="tabmenu_wrap clearFix">
+            <ul>
+                <li><a href="#" class="on">공정현황 LIST</a></li>
+                <li><a href="#">제품등록관리</a></li>
+                <li><a href="#">공정항목별규격</a></li>
+                <li><a href="#">부품별제품 Mapping현황</a></li>
+            </ul>
+        </div>        
         <div class="row">     
          <section class="section_1 col_12">
           <div class="col">
