[성룡]f_qua 전체 , g_out 전체 , i_stat_als_10 수정

--- a/project/src/f_qua_mng/f_qua_mng_2.html
+++ b/project/src/f_qua_mng/f_qua_mng_2.html
@@ -348,7 +348,7 @@
                             </div>
                             <p class="frm_btn_3 top">
                                 <input type="button" value="저장">
-                                <input type="submit" value="닫기">                                
+                                <input type="submit" value="엑셀Down">                                
                             </p>
                         </form>
                     </div>
